# rustchem

./: Cargo.toml  LICENSE  README.md
data_files/: elements.csv
rustchem/: Cargo.toml
rustchem/data_files/: elements.csv
rustchem/src/: main.rs  test_utils.rs
rustchem/src/io/: format_mol.rs  format_pdb.rs  mod.rs  utils.rs
rustchem/src/io/formats_mol/: ct_v2000.rs  ct_v3000.rs  format_mol.rs  mod.rs  utils.rs
rustchem/src/mol/: atom.rs  errors.rs  mod.rs  molecule.rs  point3d.rs  property_map.rs
rustchem/test_files/: alanine.mol  alanine_v2000.mol  alanine_v3000.mol
src/: lib.rs  main.rs
src/io/: errors.rs  format_mol.rs  format_pdb.rs  line_reader.rs  mod.rs  utils.rs
src/mol/: atom.rs  bond.rs  element.rs  errors.rs  mod.rs  molecule.rs  point3d.rs  property_map.rs
test_files/: alanine.mol
