[package]
name = "rustchem"
version = "0.1.0"
authors = ["Andrew Wilkinson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
lazy_static = "1.4.0"
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.22"
